# hikmalayer-core

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  R05_Cargo_and_integration_notes.md  README.md  docker-compose.yml  mint_token.rs  mod.rs  persistence.rs  routes.rs  state.rs  test-results.txt  testing-report.md  token.rs
.github/workflows/: docker-image.yml  rust.yml
dashboard/src/: api.js
dashboard/src/components/: BlockchainViewer.jsx  TokenManager.jsx  WalletAuth.jsx
dashboard/src/hooks/: useAuthenticatedApi.js  useWallet.jsx
docs/: API.md  deployment_guide.md  external_audit_guide.md  local_deployment_result.md  local_deployment_result_wsl2.md  mainnet_readiness.md  testing-report.md
ops/: hikmalayer_exporter.py  start_testnet.sh
ops/caddy/: Caddyfile
ops/grafana/provisioning/alerting/: hikmalayer_alerts.yml
ops/grafana/provisioning/datasources/: prometheus.yml
ops/prometheus/: prometheus.yml
src/: lib.rs  main.rs  persistence.rs
src/api/: routes.rs
src/auth/: middleware.rs  mod.rs  routes.rs  signature.rs  token.rs
src/blockchain/: block.rs  chain.rs  mod.rs  state.rs  transaction.rs
src/consensus/: mod.rs  pos.rs  pow.rs  vrf.rs
src/contract/: contract.rs
src/p2p/: mod.rs  peerbook.rs  protocol.rs  service.rs
